--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "service-name",
+  "name": "3d-model-ingestion-service",
   "version": "1.0.0",
-  "description": "This is template for map colonies typescript service",
+  "description": "A restful API for creating a new 3d model ingestion flow",
   "main": "./src/index.ts",
   "scripts": {
     "test:unit": "jest --config=./tests/configurations/unit/jest.config.js",
@@ -42,6 +42,7 @@
     "@map-colonies/mc-logger": "^1.2.1",
     "@map-colonies/mc-probe": "^1.0.0",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
+    "axios": "^0.21.1",
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.10.8",
@@ -59,16 +60,19 @@
     "@redocly/openapi-cli": "^1.0.0-beta.25",
     "@types/config": "0.0.36",
     "@types/express": "^4.17.8",
+    "@types/faker": "^5.1.6",
     "@types/jest": "^26.0.19",
     "@types/js-yaml": "^3.12.5",
     "@types/multer": "^1.4.5",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
+    "@types/uuid": "^8.3.0",
     "@types/yamljs": "^0.2.31",
     "commitlint": "^9.1.2",
     "copyfiles": "^2.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.8.1",
+    "faker": "^5.4.0",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
     "jest-create-mock-instance": "^1.1.0",
