--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@map-colonies/eslint-config": "^2.1.0",
     "@map-colonies/prettier-config": "0.0.1",
     "@redocly/openapi-cli": "^1.0.0-beta.25",
+    "@types/axios": "^0.14.0",
     "@types/config": "0.0.36",
     "@types/express": "^4.17.8",
     "@types/faker": "^5.1.6",
