--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jest": "^26.6.3",
     "jest-create-mock-instance": "^1.1.0",
     "jest-html-reporters": "^2.0.3",
+    "jest-mock-axios": "^4.3.0",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
