--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "js-yaml": "^3.14.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
-    "tsyringe": "^4.4.0"
+    "tsyringe": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
