--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -8,10 +9,11 @@ spec:
   rules:
   - http:
       paths:
-      - path: /ingestion-service(/|$)(.*)
+      - path: /{{ .Release.Name }}(/|$)(.*)
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}-service
             port:
               number: 8080
+{{ end }}
