feat: enable cors

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@map-colonies/openapi-express-viewer": "^2.0.1",
     "axios": "^0.21.1",
     "config": "^3.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.10.8",
     "http-status-codes": "^2.1.4",
@@ -61,6 +62,7 @@
     "@redocly/openapi-cli": "^1.0.0-beta.25",
     "@types/axios": "^0.14.0",
     "@types/config": "0.0.36",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.8",
     "@types/faker": "^5.1.6",
     "@types/jest": "^26.0.19",
