chore: add helm chart

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@map-colonies/mc-logger": "^1.2.1",
     "@map-colonies/mc-probe": "^1.0.0",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
+    "@map-colonies/standard-version-update-helm-version": "^2.0.1",
     "axios": "^0.21.1",
     "config": "^3.3.3",
     "cors": "^2.8.5",
