chore: azure-pipeline for building helm chart

--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -1,21 +1,24 @@
-name: Build-and-push
+name: build_and_push_image_to_azure
 
 on:
   push:
     tags:
-    - 'v*'
+      - 'v*'
 
 jobs:
 
   build_and_test:
     runs-on: ubuntu-latest
 
-
     steps:
+        - name: set-repo-name
+          id: set-repo-name
+          run: |
+            repoName=$(echo ${{ github.repository }} | cut -d/ -f2)
+            echo "::set-output name=repoName::$repoName"
         - name: Azure Pipelines Action
           uses: Azure/pipelines@v1
           with:
-            azure-devops-project-url: https://dev.azure.com/Libot-Mipui-Org/3d-model-ingestion-service
-            azure-pipeline-name: 'build-and-push-to-ACR'
+            azure-devops-project-url: https://dev.azure.com/Libot-Mipui-Org/3D
+            azure-pipeline-name: '${{steps.set-repo-name.outputs.repoName}}'
             azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
-            
