--- a/helm/templates/route.yaml
+++ b/helm/templates/route.yaml
@@ -15,5 +15,5 @@ metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | 
 spec:
   to:
     kind: Service
-    name: {{ $.Release.Name }}-{{ .Chart.Name }}
+    name: {{ $fullname }}
 {{- end -}}
