--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express-openapi-validator": "^4.10.8",
     "http-status-codes": "^2.1.4",
     "js-yaml": "^3.14.1",
+    "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.4.0",
