--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -3,7 +3,7 @@
 port: 8080
 
 # Name of the image tu pull from registry
-image: acrarolibotnonprod.azurecr.io/ingestion:v1.0.2-rc-profile
+image: acrarolibotnonprod.azurecr.io/3d-model-ingestion-service:v2.0.0
 
 replicaCount: 1
 
@@ -11,7 +11,7 @@ service:
   internalPort: 8080
   externalPort: 8080
 
-jobServiceUrl:  https://job-manager-3d-dev-dev-job-manager-route-3d-dev.apps.v0h0bdx6.eastus.aroapp.io/jobs
+jobServiceUrl:  https://job-manager-discrete-ingestion-db-route-3d-dev.apps.v0h0bdx6.eastus.aroapp.io/jobs
 
 flowServiceUrl: http://10.8.1.9:8083/flows
 
