--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -17,7 +17,7 @@ flowServiceUrl: http://10.8.1.9:8083/flows
 
 paths:
   mountPath: /mnt/mimi/libot
-  basePath: //domtest/mimi/archi/maz/silver/libot
+  basePath: \\domtest\mimi\archi\maz\silver\libot
 ingress:
   enabled: false
 
