--- a/helm/templates/pvc.yaml
+++ b/helm/templates/pvc.yaml
@@ -3,11 +3,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Values.storage.ingestionSourcePvc.name }}
-  labels:
-    app: {{ template "discrete-ingestion.name" . }}
-    component: discrete-ingestion
-    environment: {{ .Values.environment }}
-    release: {{ .Release.Name }}  
+  # labels:
+  #   app: {{ template "discrete-ingestion.name" . }}
+  #   component: discrete-ingestion
+  #   environment: {{ .Values.environment }}
+  #   release: {{ .Release.Name }}  
 spec:
   {{- if .Values.storage.storageClass }}
   storageClassName: {{ .Values.storage.storageClass }}
