fix: removed openapi lint

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,8 +28,8 @@ jobs:
           prettier: true
           eslint_extensions: ts
 
-      - name: OpenAPI Lint Checks
-        uses: nwestfall/openapi-action@v1.0.2
-        with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
-         file: ./openapi3.yaml
+      # - name: OpenAPI Lint Checks
+      #   uses: nwestfall/openapi-action@v1.0.2
+      #   with:
+      #    github_token: ${{ secrets.GITHUB_TOKEN }}
+      #    file: ./openapi3.yaml
