--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -19,6 +19,6 @@ jobs:
         - name: Azure Pipelines Action
           uses: Azure/pipelines@v1
           with:
-            azure-devops-project-url: https://dev.azure.com/Libot-Mipui-Org/3D
-            azure-pipeline-name: '${{steps.set-repo-name.outputs.repoName}}'
+            azure-devops-project-url: https://dev.azure.com/Libot-Mipui-Org/3d-model-ingestion-service
+            azure-pipeline-name: 'build-and-push-to-ACR'
             azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
