--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -1,21 +1,13 @@
-name: build_and_push_image_to_azure
 
+name: Publish release and push to ACR
 on:
   push:
     tags:
       - 'v*'
-
 jobs:
-
-  build_and_test:
+   push_image_to_ACR:
     runs-on: ubuntu-latest
-
     steps:
-        - name: set-repo-name
-          id: set-repo-name
-          run: |
-            repoName=$(echo ${{ github.repository }} | cut -d/ -f2)
-            echo "::set-output name=repoName::$repoName"
         - name: Azure Pipelines Action
           uses: Azure/pipelines@v1
           with:
