--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,7 @@
 port: 8080
 
 # Name of the image tu pull from registry
-image: acrarolibotnonprod.azurecr.io/3d-model-ingestion-service:v2.0.0
+image: acrarolibotnonprod.azurecr.io/3d-model-ingestion-service:vFix
 
 replicaCount: 1
 
