Single mount point (#12)
* fix: fixed tests

* fix: removed unneeded console logs

* feat(configurations): logical and pysical model paths added as env variables

* feat: validation manager added

* feat: updated unit tests to work with validator

* feat(configurations): helm injects env variables

* fix: removed unneeded console logs

* feat(configurations): logical and pysical model paths added as env variables

* feat: validation manager added

* feat: updated unit tests to work with validator

* feat(configurations): helm injects env variables

* fix: base path changes

* feat: pv and pvc configs

* feat(configurations): pv paths for middleware

* feat: adjastments for file picker

* feat: helm update

* fix: licrc and package-lock

* fix: openapi tileset property

* feat: licrc

* fix: licrc

* fix: openapi

* fix: licrc and package-lock

* fix: removed openapi lint

* feat: added pv path to env variable

* feat: pvc name

* fix: test

* Update build_and_push.yaml

* feat: added middleware

* fix: workflow

* feat: image change

* fix: mount and base path slashes

* fix: test fix

* fix: test uncommented

* fix: deleted unneeded licrc

* feat: updated values

Co-authored-by: Netanel Cohen <netanel153@gmail.com>
Co-authored-by: Yossi <13926731+Yossizz@users.noreply.github.com>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,7 @@
 port: 8080
 
 # Name of the image tu pull from registry
-image: mapcolonies/3d-model-ingestion-service:latest
+image: acrarolibotnonprod.azurecr.io/3d-model-ingestion-service:vDev
 
 replicaCount: 1
 
@@ -11,11 +11,15 @@ service:
   internalPort: 8080
   externalPort: 8080
 
-jobServiceUrl: http://discrete-ingestion-db:8080/jobs
-flowServiceUrl: http://nifi:8080
+jobServiceUrl:  https://job-manager-discrete-ingestion-db-route-3d-dev.apps.v0h0bdx6.eastus.aroapp.io/jobs
 
+flowServiceUrl: http://10.8.1.9:8083/flows
+
+paths:
+  mountPath: /home/libotadmin
+  basePath: \\domtest\mimi\archi\maz\silver\libot
 ingress:
-  enabled: true
+  enabled: false
 
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -27,7 +31,22 @@ ingress:
   hosts: ["minikube.local"]
 
 route:
-  enabled: false
+  enabled: true
 
   annotations:
     haproxy.router.openshift.io/rewrite-target: "/"
+
+storage:
+  ingestionSourcePvc:
+    enabled: false
+    name: 3d-pvc
+    size: 5Gi
+    subPath: ingestion-source
+  storageClass: azure-file
+  accessModes: ReadWriteMany
+  pv: #for local dev deployment
+    ingestionPv:
+      name: ingestion-source-pv
+      enabled: false
+      size: 5Gi
+      hostPath: /3Dmodels    
