--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -16,10 +16,17 @@ spec:
       labels:
         app: {{ $fullname }}
     spec:
+      volumes:
+      - name: ingestion-storage
+        persistentVolumeClaim:
+          claimName: {{ .Values.storage.ingestionSourcePvc.name }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image }}"
         imagePullPolicy: IfNotPresent
+        volumeMounts: 
+            - name: ingestion-storage
+              mountPath: {{ .Values.storage.pv.ingestionPv.hostPath }}
         env:
         - name: SERVER_PORT
           value: {{ .Values.service.internalPort | quote }}
@@ -27,6 +34,12 @@ spec:
           value: {{ tpl .Values.jobServiceUrl . | quote }}
         - name: FLOW_SERVICE_URL
           value: {{ tpl .Values.flowServiceUrl . | quote }}
+        - name: MOUNT_PATH
+          value: {{ tpl .Values.paths.mountPath . | quote }}
+        - name: BASE_PATH
+          value: {{ tpl .Values.paths.basePath . | quote }}
+        - name: PV_PATH
+          value: {{ tpl .Values.storage.pv.ingestionPv.hostPath . | quote }}          
         ports:
         - containerPort: {{ .Values.service.internalPort | int }}
         livenessProbe:
