--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-model-ingestion-service",
-  "version": "1.3.1",
+  "version": "2.0.0",
   "description": "A restful API for creating a new 3d model ingestion flow",
   "main": "./src/index.ts",
   "scripts": {
@@ -44,8 +44,9 @@
     "@map-colonies/mc-probe": "^1.0.0",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
     "@map-colonies/standard-version-update-helm-version": "^2.0.1",
+    "@map-colonies/storage-explorer-middleware": "^1.1.0",
     "@types/geojson": "^7946.0.8",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -54,7 +55,7 @@
     "js-yaml": "^3.14.1",
     "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.1.6",
+    "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.4.0",
     "uuid": "^8.3.2"
   },
@@ -63,7 +64,7 @@
     "@commitlint/config-conventional": "^10.0.0",
     "@map-colonies/eslint-config": "^2.1.0",
     "@map-colonies/prettier-config": "0.0.1",
-    "@redocly/openapi-cli": "^1.0.0-beta.25",
+    "@redocly/openapi-cli": "^1.0.0-beta.83",
     "@types/axios": "^0.14.0",
     "@types/config": "0.0.36",
     "@types/cors": "^2.8.12",
@@ -90,7 +91,7 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.0.0",
+    "standard-version": "^9.3.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.1.1",
