--- a/package.json
+++ b/package.json
@@ -39,62 +39,68 @@
     }
   },
   "dependencies": {
-    "@map-colonies/error-express-handler": "^1.2.0",
-    "@map-colonies/mc-logger": "^1.2.1",
-    "@map-colonies/mc-probe": "^1.0.0",
+    "@godaddy/terminus": "^4.10.2",
+    "@map-colonies/error-express-handler": "^2.1.0",
+    "@map-colonies/js-logger": "^0.0.4",
+    "@map-colonies/mc-logger": "^2.0.2",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
+    "@map-colonies/read-pkg": "^0.0.1",
     "@map-colonies/standard-version-update-helm-version": "^2.0.1",
     "@map-colonies/storage-explorer-middleware": "^1.2.3",
+    "@map-colonies/telemetry": "^3.1.0",
+    "@opentelemetry/api": "^1.0.1",
+    "@opentelemetry/api-metrics": "^0.23.0",
+    "@opentelemetry/instrumentation-express": "^0.23.0",
+    "@opentelemetry/instrumentation-http": "^0.23.0",
     "@types/geojson": "^7946.0.8",
-    "axios": "^0.21.4",
-    "config": "^3.3.3",
+    "axios": "^0.27.2",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-openapi-validator": "^4.10.8",
-    "http-status-codes": "^2.1.4",
-    "js-yaml": "^3.14.1",
+    "express": "^4.18.1",
+    "express-openapi-validator": "^4.13.7",
+    "http-status-codes": "^2.2.0",
+    "js-yaml": "^4.1.0",
     "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.3.0",
-    "tsyringe": "^4.4.0",
+    "swagger-ui-express": "^4.4.0",
+    "tsyringe": "^4.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^10.0.0",
-    "@map-colonies/eslint-config": "^2.1.0",
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "@map-colonies/eslint-config": "^3.1.1",
     "@map-colonies/prettier-config": "0.0.1",
-    "@redocly/openapi-cli": "^1.0.0-beta.83",
+    "@ngneat/falso": "^5.3.0",
+    "@redocly/openapi-cli": "^1.0.0-beta.94",
     "@types/axios": "^0.14.0",
-    "@types/config": "0.0.36",
+    "@types/config": "0.0.41",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.8",
-    "@types/faker": "^5.1.6",
-    "@types/jest": "^26.0.19",
-    "@types/js-yaml": "^3.12.5",
-    "@types/multer": "^1.4.5",
-    "@types/supertest": "^2.0.10",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
+    "@types/js-yaml": "^4.0.5",
+    "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
     "@types/yamljs": "^0.2.31",
-    "commitlint": "^9.1.2",
-    "copyfiles": "^2.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.8.1",
-    "faker": "^5.4.0",
-    "husky": "^4.2.5",
-    "jest": "^26.6.3",
-    "jest-create-mock-instance": "^1.1.0",
-    "jest-html-reporters": "^2.0.3",
-    "jest-mock-axios": "^4.3.0",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
+    "commitlint": "^17.0.0",
+    "copyfiles": "^2.4.1",
+    "cz-conventional-changelog": "^3.0.1",
+    "eslint": "^8.15.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.0",
+    "jest-create-mock-instance": "^2.0.0",
+    "jest-html-reporters": "^3.0.7",
+    "jest-mock-axios": "^4.6.1",
+    "nodemon": "^2.0.16",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.3.2",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.3.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^3.8.3"
+    "standard-version": "^9.5.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.2",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.6.4"
   }
 }
