--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -14,4 +14,4 @@ jobs:
           with:
             azure-devops-project-url: https://dev.azure.com/Libot-Mipui-Org/3d-model-ingestion-service
             azure-pipeline-name: 'build-and-push-to-ACR'
-            azure-devops-token: ${{ secrets.AZURE_DEVOPS_TOKEN }}
+            azure-devops-token: ${{ secrets.AZURE_TOKEN_NEW }}
