feat: add mc-models

--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "release": "standard-version",
     "test": "npm run test:unit && npm run test:integration",
     "prebuild": "npm run clean",
-    "build": "tsc --project tsconfig.build.json  && npm run assets:copy",
+    "build": "tsc --project tsconfig.build.json && npm run bundleOpenApi && npm run assets:copy",
     "start:ts": "ts-node ./src/index.ts",
     "start": "npm run build && cd dist && node ./index.js",
-    "assets:copy": "copyfiles -f ./config/* ./dist/config && copyfiles -f ./openapi3.yaml ./dist/ && copyfiles ./package.json dist",
-    "clean": "rimraf dist"
+    "assets:copy": "copyfiles -f ./config/* ./dist/config && copyfiles -f ./bundledApi.yaml ./dist/ && copyfiles ./package.json dist",
+    "clean": "rimraf dist bundledApi.yaml",
+    "copySchema": "copyfiles -u 5 \"./node_modules/@map-colonies/mc-model-types/Schema/yaml/**/*\" ./Schema",
+    "prebundleOpenApi": "npm run copySchema",
+    "bundleOpenApi": "openapi bundle --output ./bundledApi.yaml --ext yaml ./openapi3.yaml",
+    "postbundleOpenApi": "rimraf Schema"
   },
   "directories": {
     "test": "tests"
@@ -42,6 +46,7 @@
     "@map-colonies/error-express-handler": "^1.2.0",
     "@map-colonies/mc-logger": "^1.2.1",
     "@map-colonies/mc-probe": "^1.0.0",
+    "@map-colonies/mc-model-types": "file:../mc-models/map-colonies-mc-model-types-11.2.0.tgz",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
     "@map-colonies/standard-version-update-helm-version": "^2.0.1",
     "@map-colonies/storage-explorer-middleware": "^1.2.3",
