--- a/.redocly.yaml
+++ b/.redocly.yaml
@@ -26,6 +26,8 @@ lint:
       prefixes: ['should', 'is', 'has']
     no-unused-components:
       severity: error
+    no-empty-servers: off
+    no-unresolved-refs: off
 
   decorators:
     # Decorators modify the the definition after validation is complete, only in the bundling process.
