--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
           httpGet:
             path: /liveness
             port: {{ .Values.service.internalPort | int }}
-        readinessProbe:
-          httpGet:
-            path: /readiness
-            port: {{ .Values.service.internalPort | int }}
+        # readinessProbe:
+        #   httpGet:
+        #     path: /readiness
+        #     port: {{ .Values.service.internalPort | int }}
