--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "release": "standard-version",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit && npm run bundleOpenApi && npm run test:integration",
     "prebuild": "npm run clean",
     "build": "tsc --project tsconfig.build.json && npm run bundleOpenApi && npm run assets:copy",
     "start:ts": "ts-node ./src/index.ts",
