Add mc models (#19)
* feat: add mc-models

* fix: taking care of tests

* fix: prettier added

* fix: fixed version in openapi

* fix: readiness in comments

* fix: tests fixed

* build: image update

Co-authored-by: ronit kissis <ronitkisis1997@gmail.com>

--- a/.redocly.yaml
+++ b/.redocly.yaml
@@ -27,6 +27,7 @@ lint:
     no-unused-components:
       severity: error
     no-empty-servers: off
+    no-unresolved-refs: off
 
   decorators:
     # Decorators modify the the definition after validation is complete, only in the bundling process.
