--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "release": "standard-version",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit && npm run bundleOpenApi && npm run test:integration",
     "prebuild": "npm run clean",
-    "build": "tsc --project tsconfig.build.json  && npm run assets:copy",
+    "build": "tsc --project tsconfig.build.json && npm run bundleOpenApi && npm run assets:copy",
     "start:ts": "ts-node ./src/index.ts",
     "start": "npm run build && cd dist && node ./index.js",
-    "assets:copy": "copyfiles -f ./config/* ./dist/config && copyfiles -f ./openapi3.yaml ./dist/ && copyfiles ./package.json dist",
-    "clean": "rimraf dist"
+    "assets:copy": "copyfiles -f ./config/* ./dist/config && copyfiles -f ./bundledApi.yaml ./dist/ && copyfiles ./package.json dist",
+    "clean": "rimraf dist bundledApi.yaml",
+    "copySchema": "copyfiles -u 5 \"./node_modules/@map-colonies/mc-model-types/Schema/yaml/**/*\" ./Schema",
+    "prebundleOpenApi": "npm run copySchema",
+    "bundleOpenApi": "openapi bundle --output ./bundledApi.yaml --ext yaml ./openapi3.yaml",
+    "postbundleOpenApi": "rimraf Schema"
   },
   "directories": {
     "test": "tests"
@@ -43,6 +47,7 @@
     "@map-colonies/error-express-handler": "^2.1.0",
     "@map-colonies/js-logger": "^0.0.4",
     "@map-colonies/mc-logger": "^2.0.2",
+    "@map-colonies/mc-model-types": "^12.0.1",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
     "@map-colonies/read-pkg": "^0.0.1",
     "@map-colonies/standard-version-update-helm-version": "^2.0.1",
@@ -59,6 +64,7 @@
     "express": "^4.18.1",
     "express-openapi-validator": "^4.13.7",
     "http-status-codes": "^2.2.0",
+    "husky": "^8.0.1",
     "js-yaml": "^4.1.0",
     "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
@@ -88,7 +94,6 @@
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.0.1",
     "eslint": "^8.15.0",
-    "husky": "^8.0.1",
     "jest": "^28.1.0",
     "jest-create-mock-instance": "^2.0.0",
     "jest-html-reporters": "^3.0.7",
