--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@godaddy/terminus": "^4.10.2",
     "@map-colonies/error-express-handler": "^2.1.0",
+    "@map-colonies/express-access-log-middleware": "^1.0.0",
     "@map-colonies/js-logger": "^0.0.4",
     "@map-colonies/mc-logger": "^2.0.2",
     "@map-colonies/mc-model-types": "^12.0.3",
@@ -59,6 +60,7 @@
     "@opentelemetry/instrumentation-http": "^0.23.0",
     "@types/geojson": "^7946.0.8",
     "axios": "^0.27.2",
+    "compression": "^1.7.4",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -80,6 +82,7 @@
     "@ngneat/falso": "^5.3.0",
     "@redocly/openapi-cli": "^1.0.0-beta.94",
     "@types/axios": "^0.14.0",
+    "@types/compression": "^1.7.2",
     "@types/config": "0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
