feat: new version of mc-models

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "release": "standard-version",
-    "test": "npm run test:unit && npm run bundleOpenApi && npm run test:integration",
+    "test": "npm run test:unit && npm run test:integration",
     "prebuild": "npm run clean",
-    "build": "tsc --project tsconfig.build.json && npm run bundleOpenApi && npm run assets:copy",
+    "build": "tsc --project tsconfig.build.json && npm run assets:copy",
     "start:ts": "ts-node ./src/index.ts",
     "start": "npm run build && cd dist && node ./index.js",
     "assets:copy": "copyfiles -f ./config/* ./dist/config && copyfiles -f ./bundledApi.yaml ./dist/ && copyfiles ./package.json dist",
-    "clean": "rimraf dist bundledApi.yaml",
+    "clean": "rimraf dist",
     "copySchema": "copyfiles -u 5 \"./node_modules/@map-colonies/mc-model-types/Schema/yaml/**/*\" ./Schema",
     "prebundleOpenApi": "npm run copySchema",
     "bundleOpenApi": "openapi bundle --output ./bundledApi.yaml --ext yaml ./openapi3.yaml",
@@ -47,7 +47,7 @@
     "@map-colonies/error-express-handler": "^2.1.0",
     "@map-colonies/js-logger": "^0.0.4",
     "@map-colonies/mc-logger": "^2.0.2",
-    "@map-colonies/mc-model-types": "^12.0.3",
+    "@map-colonies/mc-model-types": "^12.0.4",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
     "@map-colonies/read-pkg": "^0.0.1",
     "@map-colonies/standard-version-update-helm-version": "^2.0.1",
