fix: add bundledApi

--- a/bundledApi.yaml
+++ b/bundledApi.yaml
@@ -383,10 +383,14 @@ components:
           description: Area inside the region
         productStatus:
           type: string
-          default: UnPublished
-          description: The path of the model
+          default: UNPUBLISHED
+          description: The status of the model
         productSource:
           type: string
           readOnly: true
           description: The path of the model
+        keywords:
+          type: string
+          nullable: true
+          description: The keywords of the product
       additionalProperties: false
