--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   "dependencies": {
     "@godaddy/terminus": "^4.10.2",
     "@map-colonies/error-express-handler": "^2.1.0",
+    "@map-colonies/express-access-log-middleware": "^1.0.0",
     "@map-colonies/js-logger": "^0.0.4",
-    "@map-colonies/mc-logger": "^2.0.2",
     "@map-colonies/mc-model-types": "^12.0.4",
     "@map-colonies/openapi-express-viewer": "^2.0.1",
     "@map-colonies/read-pkg": "^0.0.1",
@@ -98,7 +98,7 @@
     "jest-create-mock-instance": "^2.0.0",
     "jest-html-reporters": "^3.0.7",
     "jest-mock-axios": "^4.6.1",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.19",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
