--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,10 +1,10 @@
 port: 8080
-image: 'acrarolibotnonprod.azurecr.io/3d-model-ingestion-service:v3.0.0'
+image: 'acrarolibotnonprod.azurecr.io/3d-model-ingestion-service:nati-v2-profile-test'
 replicaCount: 1
 service:
   internalPort: 8080
   externalPort: 8080
-jobServiceUrl: http://job-manager-discrete-ingestion-db/jobs
+jobServiceUrl: https://jm-test-pr-job-manager-route-3d-dev.apps.j1lk3njp.eastus.aroapp.io/jobs
 flowServiceUrl: 'http://10.8.1.9:8083/flows'
 paths:
   mountPath: /home/libotadmin
