--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 service:
   internalPort: 8080
   externalPort: 8080
-jobServiceUrl: https://jm-test-pr-job-manager-route-3d-dev.apps.j1lk3njp.eastus.aroapp.io/jobs
+jobServiceUrl: http://job-manager-discrete-ingestion-db/jobs
 flowServiceUrl: 'http://10.8.1.9:8083/flows'
 paths:
   mountPath: /home/libotadmin
